--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <script src="main.js" charset="utf-8"></script>
 </head>
 <body>
-  <div ng-view>
-  </div>
+  <div ng-view></div>
 </body>
 </html>
