--- a/index.html
+++ b/index.html
@@ -14,7 +14,25 @@
   <script src="http://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
   <script src="main.js" charset="utf-8"></script>
 </head>
+
 <body>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns">
+          <a href="/" id="logo"></a>
+          <nav id="nav-menu">
+            <a href="#" id="menu-icon"></a>
+            <ul id="menu">
+              <li><a href="#/">Home</a></li>
+              <li><a href="#/singles">For Singles</a></li>
+              <li><a href="#/couples">Couples Only</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
   <div ng-view></div>
 </body>
 </html>
