--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <a href="/" id="logo"></a>
+          <a href="#/" id="logo"></a>
           <nav id="nav-menu">
             <a href="#" id="menu-icon"></a>
             <ul id="menu">
