about page completed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#" id="menu-icon"></a>
             <ul id="menu">
               <li><a href="#/">Home</a></li>
+              <li><a href="#/about">About</a></li>
               <li><a href="#/singles">For Singles</a></li>
               <li><a href="#/couples">Couples Only</a></li>
             </ul>
